testdata/asm/invalid/div_06.zkasm
;;error:7:3-31:witness bit overflow (u16 into u15)
fn div(x u16, y u16) -> (q u16, r u16) {
  var sum u32
  var witsum u17
  var w u15

  q, r, w, sum, witsum = x / y
  return
}
